[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/interface/gui/Dialogfrm.gd" type="Script" id=1]
[ext_resource path="res://src/interface/gui/TradScreen.tscn" type="PackedScene" id=2]
[ext_resource path="res://assests/Creatures_0003_6.png" type="Texture" id=3]

[node name="Dialogfrm" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Portrait" type="TextureRect" parent="."]
anchor_left = 0.899
anchor_top = 0.537
anchor_right = 0.993
anchor_bottom = 0.697
margin_left = 0.495178
margin_top = -0.247467
margin_right = -31.7608
margin_bottom = -32.2475
rect_scale = Vector2( 1.5, 1.5 )
mouse_filter = 0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -180.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="Panel/HBoxContainer"]
margin_right = 38.0
margin_bottom = 150.0
size_flags_vertical = 5
text = "Name"

[node name="Text" type="RichTextLabel" parent="Panel/HBoxContainer"]
margin_left = 42.0
margin_right = 933.0
margin_bottom = 150.0
size_flags_horizontal = 3
size_flags_vertical = 5
bbcode_enabled = true

[node name="ButtonNext" type="Button" parent="Panel/HBoxContainer"]
visible = false
margin_left = 942.0
margin_right = 984.0
margin_bottom = 20.0
size_flags_vertical = 3
text = "Next"

[node name="ButtonFinish" type="Button" parent="Panel/HBoxContainer"]
visible = false
margin_left = 883.0
margin_right = 933.0
margin_bottom = 150.0
size_flags_vertical = 3
text = "Finish"

[node name="ButtonTrade" type="Button" parent="Panel/HBoxContainer"]
margin_left = 937.0
margin_right = 984.0
margin_bottom = 150.0
size_flags_vertical = 3
text = "Close"
__meta__ = {
"_editor_description_": ""
}

[node name="Trad" type="Control" parent="Panel"]
anchor_right = 0.997
anchor_bottom = 1.0
margin_top = 57.0
margin_right = 0.0719604
margin_bottom = 2.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TradItem1" parent="Panel/Trad" instance=ExtResource( 2 )]
anchor_top = 0.275
anchor_bottom = 0.654
margin_top = -0.375
margin_right = 3.0
margin_bottom = 7.24999

[node name="TradItem2" parent="Panel/Trad" instance=ExtResource( 2 )]
anchor_right = 1.003
anchor_bottom = 0.286
margin_right = -0.0629883
margin_bottom = 4.25
[connection signal="pressed" from="Panel/HBoxContainer/ButtonNext" to="." method="_on_ButtonNext_pressed"]
[connection signal="pressed" from="Panel/HBoxContainer/ButtonFinish" to="." method="_on_ButtonFinish_pressed"]
[connection signal="pressed" from="Panel/HBoxContainer/ButtonTrade" to="." method="_on_ButtonTrade_pressed"]
